fixed some issues with the scrollbar
- inlined scrollbar detection css styles to make sure we're able to
  detect the scrollbar even when css stylesheet file is not yet loaded.

- rely on the visible instances of the akno not just any available
  instance on the page when checking for the scrollbar availability.

- call close callback when the animation is finished. That insures
  destroy call does not halts the close animation.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -64,13 +64,3 @@
     display: block;
     margin: 0 auto;
 }
-
-
-/* a service class to measure the scrollbar width */
-.scrollbar-measure {
-    width: 100px;
-    height: 100px;
-    overflow: scroll;
-    position: absolute;
-    top: -9999px;
-}
